# symposium

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  mdbook.yml  release-binaries.yml  release-ferris.yml
md/: SUMMARY.md  about-mods.md  install-other.md  install-rust-rover.md  install-vscode.md  install-zed.md  install.md
md/design/: distribution.md  extensions.md  implementation-overview.md  mods.md  run-mode.md  rust-crate-sources.md  vscode-extension.md
md/design/vscode-extension/: agent-registry.md  (+10 more)
md/references/: gh-actions-rust-releases.md  mynah-ui-guide.md  vscode-lm-tool-rejection.md  vscode-webview-lifecycle.md
md/using/: configuration.md
md/work-in-progress/: act-as-configured.md
setup/: Cargo.toml
setup/src/: acp.rs  main.rs  vscode.rs  zed.rs
src/cli-agent-util/: Cargo.toml
src/sacp-tee/: Cargo.toml
src/symposium-acp/: Cargo.toml
src/symposium-acp-agent/: CHANGELOG.md  Cargo.toml
src/symposium-acp-proxy/: CHANGELOG.md  Cargo.toml
src/symposium-benchmark/: Cargo.toml
src/symposium-benchmark/src/: main.rs
src/symposium-crate-sources-proxy/: Cargo.toml
src/symposium-ferris/: CHANGELOG.md  Cargo.toml
src/symposium-math/: Cargo.toml
theme/: custom.css
vscode-extension/: .vscode-test.mjs  .vscodeignore  package-lock.json  package.json  webpack.config.js
vscode-extension/src/: acpAgentActor.ts  agentActionTool.ts  agentConfiguration.ts  agentRegistry.ts  chatViewProvider.ts  discussCodeActionProvider.ts  extension.ts  extensionRegistry.ts  homerActor.ts  languageModelProvider.ts  logger.ts  settingsViewProvider.ts  symposium-webview.ts
zed-extension/: extension.toml
zed-extension/prod/: LICENSE  README.md  extension.toml
(+46 files in other folders)
