[package]
name = "sacp-tee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = "0.4.42"
clap = { workspace = true, features = ["derive"] }
sacp = "1.0.0-alpha.7"
sacp-proxy = "1.0.0-alpha.7"
sacp-tokio = "1.0.0-alpha.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
